<resources>
    <string name="app_name">ApplicacionEstudio</string>
    <string name="male">Hombre</string>
    <string name="female">Female</string>
    <string name="heigth">Altura</string>
    <string name="weight">peso</string>
    <string name="age">Edad</string>
    <string name="calculate">calcular</string>
    <string name="result">resultado</string>
    <string name="recalculate">recalcular</string>
    <string name="error">error</string>
    <string name="low_weigth">Bajo Peso</string>
    <string name="low_weigth_description">estas por debajo de tu peeso optimo</string>
    <string name="normal_weigth">Peso Normal</string>
    <string name="normal_weigth_description">sobre Peso</string>
    <string name="OverWeigth">Obesidad</string>
    <string name="over_weigth_description">estas elevado de peso</string>
    <string name="overweigth">sobre peso</string>
    <string name="obese">obeso</string>
    <string name="obese_description">estas obeso!</string>
    <string name="todo_title">hola</string>
    <string name="todo_categories">categorias</string>
    <string name="todo_task">Tareas</string>
    <string name="add_task">Nombre de la tarea</string>
    <string name="todo_business">Negocios</string>
    <string name="todo_personal">Personal</string>
    <string name="todo_others">Otros</string>
    <string name="create_task">crear tarea</string>
</resources>